--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "antd": "^5.23.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-detect-offline": "^2.4.5",
     "react-dom": "^18.3.1"
